Changed RestTemplate class to WebClient + improved code quality